# serde_multi

./: Cargo.toml  README.md  rustfmt.toml
src/: format.rs  formats.rs  lib.rs  macros.rs  multi.rs  traits.rs
src/format/: bincode.rs  cbor.rs  json.rs  messagepack.rs  ron.rs  toml.rs  xml.rs
src/formats/: bincode.rs  cbor.rs  json.rs  messagepack.rs  ron.rs  toml.rs  xml.rs
