[package]
name = "serde_multi"
version = "0.1.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_bincode = { version = "1.3", optional = true, package = "bincode" }
serde_cbor = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
rmp-core = { version = "0.8", optional = true, package = "rmp" }
rmp-serde = { version = "0.15", optional = true }
serde_ron = { version = "0.6", optional = true, package = "ron" }
serde_toml = { version = "0.5", optional = true, package = "toml" }
serde-xml-rs = { version = "0.4", optional = true }

[features]
default = []
bincode = ["serde_bincode"]
cbor = ["serde_cbor"]
json = ["serde_json"]
messagepack = ["rmp-serde", "rmp-core"]
ron = ["serde_ron"]
toml = ["serde_toml"]
xml = ["serde-xml-rs"]
