[package]
name = "serde_multi"
version = "0.1.0"
authors = ["ScottyThePilot <scotty.codes@gmail.com>"]
edition = "2018"
description = "Standardized trait API for `serde`-based crates and dynamic serialization/deserialization."
readme = "README.md"
repository = "https://github.com/ScottyThePilot/serde_multi"
license = "BSL-1.0"
keywords = ["serialization", "serde"]

[dependencies]
serde = "1.0"
serde_bincode = { version = "1.3", optional = true, package = "bincode" }
serde_cbor = { version = "0.11", optional = true }
serde_json = { version = "1.0", optional = true }
rmp-core = { version = "0.8", optional = true, package = "rmp" }
rmp-serde = { version = "0.15", optional = true }
serde_ron = { version = "0.6", optional = true, package = "ron" }
serde_toml = { version = "0.5", optional = true, package = "toml" }
serde-xml-rs = { version = "0.4", optional = true }

[features]
default = ["bincode", "cbor", "json", "messagepack", "ron", "toml", "xml"]
bincode = ["serde_bincode"]
cbor = ["serde_cbor"]
json = ["serde_json"]
messagepack = ["rmp-serde", "rmp-core"]
ron = ["serde_ron"]
toml = ["serde_toml"]
xml = ["serde-xml-rs"]

[package.metadata.docs.rs]
all-features = true
